Change $$ to eq + control notation Sec1

--- a/bib_dl2.bib
+++ b/bib_dl2.bib
@@ -327,6 +327,7 @@ rank},
   Year                     = {1999},
 
   __markedentry            = {[tom:6]},
+  File                     = {book:Mallat1999.pdf:PDF},
   Owner                    = {tom},
   Timestamp                = {2015.03.09}
 }
@@ -364,15 +365,16 @@ time-frequency},
   Timestamp                = {2015.03.09}
 }
 
-@InProceedings{Pati1993,
+@InProceedings{Pati_93_OMP,
   Title                    = {Orthogonal matching pursuit: Recursive function approximation with applications to wavelet decomposition},
   Author                   = {Pati, Yagyensh Chandra and Rezaiifar, Ramin and Krishnaprasad, PS},
-  Booktitle                = {Signals, Systems and Computers, 1993. 1993 Conference Record of The Twenty-Seventh Asilomar Conference on},
+  Booktitle                = {The Twenty-Seventh Asilomar Conference on Signals, Systems and Computers},
   Year                     = {1993},
   Organization             = {IEEE},
   Pages                    = {40--44},
 
   __markedentry            = {[tom:6]},
+  File                     = {article:Pati_93_OMP.pdf:PDF},
   Owner                    = {tom},
   Timestamp                = {2015.03.09}
 }
@@ -406,33 +408,39 @@ time-frequency},
   Series                   = {ICML '12},
 
   __markedentry            = {[tom:6]},
+  File                     = {article:Savalle_12_sparse.pdf:PDF},
   ISBN                     = {978-1-4503-1285-1},
   Location                 = {Edinburgh, Scotland, GB},
   Owner                    = {tom}
 }
 
-@Article{Rubinstein2008,
+@TechReport{Rubinstein_08_KSVD,
   Title                    = {Efficient implementation of the K-SVD algorithm using batch orthogonal matching pursuit},
   Author                   = {Rubinstein, Ron and Zibulevsky, Michael and Elad, Michael},
-  Journal                  = {CS Technion},
+  Institution              = {CS Technion},
   Year                     = {2008},
-  Pages                    = {40},
 
   __markedentry            = {[tom:6]},
+  File                     = {techreport:Rubinstein_08_KSVD.pdf:PDF},
+  Journal                  = {CS Technion},
+  Keywords                 = {Implementation
+K-SVD},
   Owner                    = {tom},
+  Pages                    = {40},
   Timestamp                = {2015.03.09}
 }
 
-@Article{Sadler1999,
+@Article{Sadler_99_multiscale,
   Title                    = {Analysis of multiscale products for step detection and estimation},
   Author                   = {Sadler, Brian M and Swami, Ananthram},
-  Journal                  = {Information Theory, IEEE Transactions on},
+  Journal                  = {IEEE Transactions on Information Theory},
   Year                     = {1999},
   Number                   = {3},
   Pages                    = {1043--1051},
   Volume                   = {45},
 
   __markedentry            = {[tom:6]},
+  File                     = {article:Sadler_99_multiscale.pdf:PDF},
   Owner                    = {tom},
   Publisher                = {IEEE},
   Timestamp                = {2015.03.09}
