Change img/notation +TODO-check notation

--- a/bib_dl2.bib
+++ b/bib_dl2.bib
@@ -449,7 +449,7 @@ K-SVD},
 @Article{Tzanetakis2002,
   Title                    = {Musical genre classification of audio signals},
   Author                   = {Tzanetakis, George and Cook, Perry},
-  Journal                  = {Speech and Audio Processing, IEEE transactions on},
+  Journal                  = {IEEE transactions on Speech and Audio Processing},
   Year                     = {2002},
   Number                   = {5},
   Pages                    = {293--302},
