--- a/grouping.tex
+++ b/grouping.tex
@@ -297,9 +297,11 @@ Les composantes contenant une même phase oscillante partagent des structures co
     Les différents paramètres sont choisis de manière aléatoire avec $a_i \in \inter$, $p \in \left[0, 5\right]$, $\displaystyle \phi_i \in\left[\frac{-\pi}{2}, \frac{\pi}{2}\right]$, $\alpha_i \in \left[0, \frac{1}{2}\right]$, $f_i \in \left[0, 50\right]Hz$ et $s \in \left[0, 40\right]dB$.
     
     \begin{figure}[htp]
-        \centering
+        %\centering
+        \hspace{-.5cm}
         \includegraphics[width=.5\textwidth]{img/artsig2.eps}
-        \vspace{-.7cm}\caption{Exemples de signal généré \textcolor{red}{Inutile : il faut une décomposition}}
+        \vspace{-.4cm}
+        \caption{Exemples de signal généré }%\textcolor{red}{Inutile : il faut une décomposition}}
         \label{}
     \end{figure}
 
