Update TODO list

--- a/bib_dl2.bib
+++ b/bib_dl2.bib
@@ -11,6 +11,7 @@
 
   __markedentry            = {[tom:6]},
   File                     = {article:jabref_folder/abalov_14_auto.pdf:PDF},
+  Keywords                 = {Decomposition, Grouping, SSA},
   Owner                    = {tom}
 }
 
@@ -39,9 +40,7 @@
 
   __markedentry            = {[tom:6]},
   File                     = {article:alexandrov_05_auto.pdf:PDF},
-  Keywords                 = {SSA
-grouping
-exponentially modulated amplitude},
+  Keywords                 = {Decomposition, Grouping, SSA, em-harmonic},
   Owner                    = {tom},
   Timestamp                = {2015.03.09}
 }
@@ -55,8 +54,24 @@ exponentially modulated amplitude},
 
   __markedentry            = {[tom:6]},
   File                     = {article:alvarez_13_auto.pdf:PDF},
+  Keywords                 = {Decomposition, Grouping, SSA},
   Owner                    = {tom},
   Timestamp                = {2015.03.09}
+}
+
+@Article{bach_12_task,
+  Title                    = {Task-Driven Dictionary Learning},
+  Author                   = {Bach, F and Mairal, J and Ponce, J},
+  Journal                  = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  Year                     = {2012},
+  Number                   = {4},
+  Pages                    = {791--804},
+  Volume                   = {34},
+
+  __markedentry            = {[tom:6]},
+  File                     = {article:bach_12_task.pdf:PDF},
+  Keywords                 = {Dictionary Learning; Tweaking; Dictionary Representation},
+  Publisher                = {IEEE Computer Society}
 }
 
 @Article{Bach_03_KICA,
@@ -103,19 +118,21 @@ exponentially modulated amplitude},
   Timestamp                = {2015.03.09}
 }
 
-@Article{Chandola2009,
+@TechReport{Chandola_09_anomaly,
   Title                    = {Anomaly detection: A survey},
   Author                   = {Chandola, Varun and Banerjee, Arindam and Kumar, Vipin},
-  Journal                  = {ACM Computing Surveys (CSUR)},
+  Institution              = {University of Minesota},
   Year                     = {2009},
   Number                   = {3},
-  Pages                    = {15},
-  Volume                   = {41},
 
   __markedentry            = {[tom:6]},
+  File                     = {techreport:Chandola_09_anomaly.pdf:PDF},
+  Journal                  = {ACM Computing Surveys (CSUR)},
   Owner                    = {tom},
+  Pages                    = {15},
   Publisher                = {ACM},
-  Timestamp                = {2015.03.09}
+  Timestamp                = {2015.03.09},
+  Volume                   = {41}
 }
 
 @Article{friedman_37_rank,
@@ -135,7 +152,7 @@ rank},
   Timestamp                = {2015.03.09}
 }
 
-@Article{Ghil2002,
+@Article{Ghil_02_SSA,
   Title                    = {Advanced spectral methods for climatic time series},
   Author                   = {Ghil, Michael and Allen, MR and Dettinger, MD and Ide, K and Kondrashov, D and Mann, ME and Robertson, Andrew W and Saunders, A and Tian, Y and Varadi, F and others},
   Journal                  = {Reviews of geophysics},
@@ -145,6 +162,8 @@ rank},
   Volume                   = {40},
 
   __markedentry            = {[tom:6]},
+  File                     = {article:Ghil_02_SSA.pdf:PDF},
+  Keywords                 = {Decomposition, Dictionary Representation, SSA},
   Owner                    = {tom},
   Publisher                = {Wiley Online Library},
   Timestamp                = {2015.03.09}
@@ -161,6 +180,7 @@ rank},
 
   __markedentry            = {[tom:6]},
   File                     = {Gilles_13_ewt.pdf:Gilles_13_ewt.pdf:PDF},
+  Keywords                 = {Wavelet; Data Driven; Dictionary Learning; Dictionary Representation},
   Owner                    = {tom},
   Publisher                = {IEEE},
   Timestamp                = {2015.03.09}
@@ -195,6 +215,8 @@ rank},
   Year                     = {2010},
 
   __markedentry            = {[tom:6]},
+  File                     = {book:Golyandina_10_ssa.pdf:PDF},
+  Keywords                 = {Decomposition, SSA},
   Owner                    = {tom},
   Timestamp                = {2015.03.09}
 }
@@ -267,7 +289,7 @@ rank},
   Timestamp                = {2015.03.09}
 }
 
-@InProceedings{Lee2006,
+@InProceedings{Lee_06_coding,
   Title                    = {Efficient sparse coding algorithms},
   Author                   = {Lee, Honglak and Battle, Alexis and Raina, Rajat and Ng, Andrew Y},
   Booktitle                = {Advances in neural information processing systems},
@@ -275,6 +297,7 @@ rank},
   Pages                    = {801--808},
 
   __markedentry            = {[tom:6]},
+  File                     = {Lee_06_coding.pdf:Lee_06_coding.pdf:PDF},
   Owner                    = {tom},
   Timestamp                = {2015.03.09}
 }
@@ -305,22 +328,7 @@ rank},
   Timestamp                = {2015.03.09}
 }
 
-@Article{Mairal2012,
-  Title                    = {Task-driven dictionary learning},
-  Author                   = {Mairal, Julien and Bach, Francis and Ponce, Jean},
-  Journal                  = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
-  Year                     = {2012},
-  Number                   = {4},
-  Pages                    = {791--804},
-  Volume                   = {34},
-
-  __markedentry            = {[tom:6]},
-  Owner                    = {tom},
-  Publisher                = {IEEE},
-  Timestamp                = {2015.03.09}
-}
-
-@Book{Mallat1999,
+@Book{Mallat_99_wavelet,
   Title                    = {A wavelet tour of signal processing},
   Author                   = {Mallat, St{\'e}phane},
   Publisher                = {Academic press},
@@ -328,6 +336,7 @@ rank},
 
   __markedentry            = {[tom:6]},
   File                     = {book:Mallat1999.pdf:PDF},
+  Keywords                 = {Wavelet; Sparse Coding; Dictionary Representation},
   Owner                    = {tom},
   Timestamp                = {2015.03.09}
 }
@@ -350,7 +359,7 @@ time-frequency},
   Timestamp                = {2015.03.09}
 }
 
-@Article{Naik2011,
+@Article{Naik_11_ICA,
   Title                    = {An overview of independent component analysis and its applications},
   Author                   = {Naik, Ganesh R and Kumar, Dinesh Kant},
   Journal                  = {Informatica: An International Journal of Computing and Informatics},
@@ -360,21 +369,22 @@ time-frequency},
   Volume                   = {35},
 
   __markedentry            = {[tom:6]},
+  File                     = {article:Naik_11_ICA.pdf:PDF},
+  Keywords                 = {ICA; Decomposition},
   Owner                    = {tom},
   Publisher                = {Slovene Society Informatika, Vozarski pot 12 1000 Ljubljana, Slovenia},
   Timestamp                = {2015.03.09}
 }
 
-@InProceedings{Pati_93_OMP,
+@InProceedings{Pati1993,
   Title                    = {Orthogonal matching pursuit: Recursive function approximation with applications to wavelet decomposition},
   Author                   = {Pati, Yagyensh Chandra and Rezaiifar, Ramin and Krishnaprasad, PS},
-  Booktitle                = {The Twenty-Seventh Asilomar Conference on Signals, Systems and Computers},
+  Booktitle                = {Signals, Systems and Computers, 1993. 1993 Conference Record of The Twenty-Seventh Asilomar Conference on},
   Year                     = {1993},
   Organization             = {IEEE},
   Pages                    = {40--44},
 
   __markedentry            = {[tom:6]},
-  File                     = {article:Pati_93_OMP.pdf:PDF},
   Owner                    = {tom},
   Timestamp                = {2015.03.09}
 }
@@ -408,7 +418,6 @@ time-frequency},
   Series                   = {ICML '12},
 
   __markedentry            = {[tom:6]},
-  File                     = {article:Savalle_12_sparse.pdf:PDF},
   ISBN                     = {978-1-4503-1285-1},
   Location                 = {Edinburgh, Scotland, GB},
   Owner                    = {tom}
@@ -417,14 +426,12 @@ time-frequency},
 @TechReport{Rubinstein_08_KSVD,
   Title                    = {Efficient implementation of the K-SVD algorithm using batch orthogonal matching pursuit},
   Author                   = {Rubinstein, Ron and Zibulevsky, Michael and Elad, Michael},
-  Institution              = {CS Technion},
+  Institution              = {Technion - Computer Science Department},
   Year                     = {2008},
 
   __markedentry            = {[tom:6]},
   File                     = {techreport:Rubinstein_08_KSVD.pdf:PDF},
   Journal                  = {CS Technion},
-  Keywords                 = {Implementation
-K-SVD},
   Owner                    = {tom},
   Pages                    = {40},
   Timestamp                = {2015.03.09}
@@ -433,7 +440,7 @@ K-SVD},
 @Article{Sadler_99_multiscale,
   Title                    = {Analysis of multiscale products for step detection and estimation},
   Author                   = {Sadler, Brian M and Swami, Ananthram},
-  Journal                  = {IEEE Transactions on Information Theory},
+  Journal                  = {Information Theory, IEEE Transactions on},
   Year                     = {1999},
   Number                   = {3},
   Pages                    = {1043--1051},
@@ -441,6 +448,7 @@ K-SVD},
 
   __markedentry            = {[tom:6]},
   File                     = {article:Sadler_99_multiscale.pdf:PDF},
+  Keywords                 = {Wavelet; Dictionary Representation},
   Owner                    = {tom},
   Publisher                = {IEEE},
   Timestamp                = {2015.03.09}
@@ -472,6 +480,7 @@ K-SVD},
 
   __markedentry            = {[tom:6]},
   File                     = {article:Vautard_89_ssa.pdf:PDF},
+  Keywords                 = {Decomposition, SSA},
   Owner                    = {tom},
   Publisher                = {Elsevier},
   Timestamp                = {2015.03.09}
@@ -505,5 +514,15 @@ K-SVD},
   Owner                    = {tom},
   Publisher                = {Taylor \& Francis},
   Timestamp                = {2015.03.09}
+}
+
+@comment{jabref-meta: selector_keywords:}
+
+@comment{jabref-meta: groupsversion:3;}
+
+@comment{jabref-meta: groupstree:
+0 AllEntriesGroup:;
+1 KeywordGroup:Dictionary Learning\;0\;keywords\;dictionary learning\;
+0\;0\;;
 }
 
